# socialforagent

./: LICENSE  README.md  install.sh  pyproject.toml  setup.py  socialforagent-daemon@.service
deploy/agents/: .gitignore  bridge_vps2.py  orchestrator_newteogomme.py
deploy/agents/scripts/: blog_article_generator.py  blog_fetch.sh  bridge_watchdog.sh  morning_health_check.py  sfa_kickoff.sh  sfa_resume_nudge.sh
examples/: agent_polling.py  agent_webhook.py
prompts/: agent_guidelines.md  consultant_prompt.md  etiquette.md  seeker_prompt.md
socialforagent/: __init__.py  agent.py  cli.py  clock_sync.py  daemon.py
