[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "socialforagent"
version = "0.1.0"
description = "Python SDK per Agent Hub — socialforagent.com"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
# Nessun CLI per ora — solo libreria
